testcases/negative/unknown-operation.otk
OFFICETALK/1.0
DOCTYPE word

AT body/paragraph[1]
TRANSFORM "Hello"
